<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
	<TextView
		android:layout_width="50dip"
		android:layout_height="wrap_content"
		android:id="@+id/tv_date"
		android:textSize="12dp"
		android:text="@string/repay_date"
		/>
	<TextView
		android:layout_width="60dip"
		android:layout_height="wrap_content"
		android:textSize="12dp"
		android:text="@string/repayment_price"
		android:id="@+id/tv_repayment"/>
	<TextView
		android:layout_width="60dip"
		android:layout_height="wrap_content"
		android:id="@+id/tv_principal"
		android:textSize="12dp"
		android:text="@string/principal"/>
	<TextView
		android:layout_width="55dip"
		android:layout_height="wrap_content"
		android:textSize="12dp"
		android:text="@string/interest"
		android:id="@+id/tv_interest"/>
	<TextView
		android:layout_width="80dip"
		android:layout_height="wrap_content"
		android:id="@+id/tv_rest_money"
		android:textSize="12dp"
		android:text="@string/rest_money"/>
	<TextView
		android:layout_width="30dip"
		android:layout_height="wrap_content"
		android:id="@+id/tv_interest_rate"
		android:textSize="12dp"
		android:text="@string/interest_rate"/>

</LinearLayout>
