<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
	android:orientation="vertical">
<LinearLayout
	android:layout_width="wrap_content"
	android:layout_height="wrap_content">
	<TextView
		android:layout_width="50dip"
		android:layout_height="wrap_content"
		android:text="@string/repayment_price"/>

	<EditText
		android:id="@+id/et_repayment_value"
		android:layout_width="200dip"
		android:layout_height="wrap_content"
		android:numeric="integer"/>
</LinearLayout>
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
		<TextView
			android:layout_width="50dip"
			android:layout_height="wrap_content"
			android:text="@string/repay_date"/>

	<Button
		android:id="@+id/btn_repay_date"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/set_date"/>
	</LinearLayout>
	<Button
		android:id="@+id/btn_repayment"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/repayment"/>
</LinearLayout>
