<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="wangjoo.pangloancalculator.MainActivity">

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical">

		<Button
			android:id="@+id/btn_create"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/create_account"/>

		<Button
			android:id="@+id/btn_show"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/show_account"/>

		<Button
			android:id="@+id/btn_modify"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/modify_account"/>

		<Button
			android:id="@+id/btn_delete"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/delete_account"/>
	</LinearLayout>
</RelativeLayout>
