<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="wangjoo.pangloancalculator.ShowAccountActivity">

	<LinearLayout
		android:id="@+id/content_layout"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		android:weightSum="1">


		<RelativeLayout
			android:id="@+id/rl_account_layout"
			android:layout_width="match_parent"
			android:layout_height="150dp"
			android:layout_weight="1.50">

			<LinearLayout
				android:id="@+id/ll_account_number"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">

				<TextView
					android:id="@+id/tv_account_number"
					android:layout_width="80dip"
					android:layout_height="wrap_content"
					android:text="@string/account_number"/>

				<TextView
					android:id="@+id/tv_account_number_value"
					android:layout_width="100dip"
					android:layout_height="30dip"
					android:layout_toRightOf="@+id/tv_account_number"/>
			</LinearLayout>

			<LinearLayout
				android:id="@+id/ll_amount"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@+id/ll_account_number">

				<TextView
					android:id="@+id/tv_amount"
					android:layout_width="80dip"
					android:layout_height="wrap_content"
					android:text="@string/amount"/>

				<TextView
					android:id="@+id/tv_amount_value"
					android:layout_width="100dip"
					android:layout_height="30dip"
					android:layout_toRightOf="@+id/tv_amount"/>
			</LinearLayout>

			<LinearLayout
				android:id="@+id/ll_interest_rate"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@+id/ll_account_number"
				android:layout_toRightOf="@+id/ll_amount">

				<TextView
					android:id="@+id/tv_interest_rate"
					android:layout_width="80dip"
					android:layout_height="wrap_content"
					android:text="@string/interest_rate"/>

				<TextView
					android:id="@+id/tv_interest_rate_value"
					android:layout_width="100dip"
					android:layout_height="30dip"
					android:layout_toRightOf="@+id/interest_rate"/>
			</LinearLayout>

			<LinearLayout
				android:id="@+id/ll_start_date"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@+id/ll_interest_rate"
				>

				<TextView
					android:layout_width="80dip"
					android:layout_height="wrap_content"
					android:text="@string/start_date"/>

				<TextView
					android:id="@+id/tv_start_date_value"
					android:layout_width="100dip"
					android:layout_height="30dip"/>
			</LinearLayout>

			<LinearLayout
				android:id="@+id/ll_end_date"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@+id/ll_amount"
				android:layout_toRightOf="@+id/ll_start_date"
				>

				<TextView
					android:layout_width="80dip"
					android:layout_height="wrap_content"
					android:text="@string/end_date"/>

				<TextView
					android:id="@+id/tv_end_date_value"
					android:layout_width="100dip"
					android:layout_height="30dip"/>
			</LinearLayout>

			<LinearLayout
				android:id="@+id/ll_inserted_count"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@+id/ll_end_date">

				<TextView
					android:layout_width="80dip"
					android:layout_height="wrap_content"
					android:text="@string/inserted_count"/>

				<TextView
					android:id="@+id/tv_inserted_count_value"
					android:layout_width="100dip"
					android:layout_height="30dip"/>
			</LinearLayout>

			<LinearLayout
				android:id="@+id/ll_total_count"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@+id/ll_end_date"
				android:layout_toRightOf="@+id/ll_inserted_count"
				>

				<TextView
					android:layout_width="80dip"
					android:layout_height="wrap_content"
					android:text="@string/total_count"/>

				<TextView
					android:id="@+id/tv_total_count_value"
					android:layout_width="100dip"
					android:layout_height="30dip"/>
			</LinearLayout>

			<LinearLayout
				android:id="@+id/ll_repayment_this_month"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@+id/ll_total_count"
				>

				<TextView
					android:layout_width="80dip"
					android:layout_height="wrap_content"
					android:text="@string/repayment_price_this_month"/>

				<TextView
					android:id="@+id/tv_repayment_this_month_value"
					android:layout_width="100dip"
					android:layout_height="30dip"/>
			</LinearLayout>

			<LinearLayout
				android:id="@+id/ll_temp_period"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@+id/ll_total_count"
				android:layout_toRightOf="@+id/ll_repayment_this_month"
				>

				<TextView
					android:layout_width="80dip"
					android:layout_height="wrap_content"
					android:text="@string/temp_period"/>

				<TextView
					android:id="@+id/tv_temp_period"
					android:layout_width="100dip"
					android:layout_height="30dip"/>
			</LinearLayout>
		</RelativeLayout>
	<include
		layout="@layout/list_layout"
		></include>
		<ListView
			android:id="@+id/lv_account_list"
			android:layout_width="fill_parent"
			android:layout_height="280dip"
			></ListView>
</LinearLayout>

	<LinearLayout
		android:id="@+id/empty_layout"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:visibility="invisible">

		<TextView
			android:layout_width="fill_parent"
			android:layout_height="150dp"
			android:text="this is empty"/>
	</LinearLayout>

</RelativeLayout>
